tests/neg-custom-args/captures/levels.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/levels.scala:22:11 ---------------------------------------
22 |    r.setV(g) // error
   |           ^
   |           Found:    (x: String) ->{cap3} String
   |           Required: String -> String
   |
   |           Note that capability `cap3` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
